# DiscoBD

./: .gitignore  CMakeLists.txt  Disco.pptx  Housing.csv  Titanic.csv  main.cpp  unsa.csv
include/: BufferManager.hpp  Disk.hpp  Interpreter.hpp  Table.hpp  Type.hpp  csv.hpp  disk.hpp  interpreter.hpp  table.hpp  type.hpp
src/: BufferManager.cpp  Disk.cpp  Interpreter.cpp  Table.cpp  disk.cpp  table.cpp
